Closed Bug 571767 Opened 14 years ago Closed 14 years ago

@font-face is not working on Android

Categories

(Firefox for Android Graveyard :: General, defect)

All
Android
defect
Not set
normal

Tracking

(blocking2.0 final+, fennec2.0+)

VERIFIED FIXED
Tracking Status
blocking2.0 --- final+
fennec 2.0+ ---

People

(Reporter: paul, Assigned: blassey)

Details

Attachments

(1 file)

example: http://neography.com/experiment/type1/
Tested with a Nexus One, Android 2.2.
Hardware: x86 → All
tracking-fennec: --- → 2.0+
Attached patch patchSplinter Review
Assignee: nobody → blassey.bugs
Attachment #458252 - Flags: review?
Attachment #458252 - Flags: review? → review?(jdaggett)
Comment on attachment 458252 [details] [diff] [review]
patch

Looks good.  I would trim out references to WINCE where they exist since that's dead code and just muddles up things.

Do the reftests in layout/reftests/font-face work?  My guess is some of those need to be updated to include a font typically found on Android installs (e.g. Droid Sans maybe?).
Attachment #458252 - Flags: review?(jdaggett) → review+
blocking2.0: --- → ?
Attachment #458252 - Flags: approval2.0?
Comment on attachment 458252 [details] [diff] [review]
patch

fennec 2.0 blockers are auto-approved
Attachment #458252 - Flags: approval2.0?
pushed http://hg.mozilla.org/mozilla-central/rev/9b4fa396873a
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Flags: in-testsuite?
blocking2.0: ? → final+
Status: RESOLVED → VERIFIED
v. Mozilla/5.0 (Android; Linux armv7l; rv:2.0b13pre) Gecko/20110314 Firefox/4.0b13pre Fennec/4.0b6pre ID:20110314043938
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: