bug 571767 - @font-face is not working on Android r=jdagget b=fennec2.0